Hide builder implementations in RuntimeHints API